# mesh_node_zig

./: .gitignore  CMakeLists.txt  README.md
mesh_node/: CMakeLists.txt
mesh_node/include/: heuristic.h
mesh_node/src/: heuristic.c  mesh_node.h
src/: main.c
